# breslintalker

./: CMakeLists.txt  Main.cpp  ProjectHome.md  Talker.cpp  Talker.h  auth2  builddb.sh  champs.htm  contact.htm  countdown.js  db_backup.sh  db_dump.sh  db_restore.sh  dblookup.php  delete.php  directions.htm  draft.htm  draft.php  draft.txt  dynamictree-webstart.jnlp  form.php  formsubmit.php  gbcubej.htm  gbcubej.java  gg.css  golfers.sql  hello.php  hello_world.php  index.htm  index.htm_backup  launch.jnlp  login.sh  querytest.php  ranks.php  roacheopen.dump  rules.htm  scorecard.htm  tableviewer.php  testdb.php  testform.htm  (+2 more)
Applet/: jinput.jar.pack.lzma  linux_natives.jar.lzma  lwjgl.jar.pack.lzma  macosx_natives.jar.lzma  run-applet.html  solaris_natives.jar.lzma  windows_natives.jar.lzma
BasicGame5/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
BasicGame5/nbproject/private/: private.properties
auth/: c3masterserver.pl  config.php  echotoscript.php  game_login.php  opendb.php  select.php  tableviewer.php  testDB.php  variables.php
hello/: HelloJME3.java  Manifest.txt  hello.html  hello.jnlp  keystore-name
images/: Thumbs.db
